--- a/Project_0/game.ipynb
+++ b/Project_0/game.ipynb
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 9,
       "metadata": {
         "id": "KIy8PgXL-2fH"
       },
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 10,
       "metadata": {
         "id": "pJaQGNND-2fK"
       },
@@ -111,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 11,
       "metadata": {
         "id": "bFzp7ROY_QYY"
       },
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 12,
       "metadata": {
         "id": "t4WXEDFS_ThY"
       },
@@ -197,18 +197,19 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "PCC3-Hwz-2fL"
       },
       "source": [
-        "## Оценка работы алгоритмов\n",
+        "## Оценка работы базовых алгоритмов\n",
         "Определяем, какой подход лучше. "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -221,8 +222,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Run benchmarking for random_predict: Ваш алгоритм угадывает число в среднем за: 99 попытки\n",
-            "Run benchmarking for game_core_v2: Ваш алгоритм угадывает число в среднем за: 33 попытки\n"
+            "Run benchmarking for random_predict: Ваш алгоритм угадывает число в среднем за: 101 попытки\n",
+            "Run benchmarking for game_core_v2: Ваш алгоритм угадывает число в среднем за: 32 попытки\n"
           ]
         }
       ],
@@ -246,26 +247,29 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ZIdPcSWzB0G1"
       },
       "source": [
-        "## Подход 3: Ваше решение"
+        "## Подход 3: Итоговое решение "
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "KPT5reW1B32U"
       },
       "source": [
-        "Напишите функцию, которая принимает на вход загаданное число и возвращает число попыток угадывания. "
+        "Функция, которая принимает на вход загаданное число и возвращает число попыток угадывания. \n",
+        "Сначала устанавливаем любое случайное число, затем в промежутке между полученным числом (исключительно) и нужным (включительно) устанавливаем новое случайное число и так до тех под пока не будет совпадения между полученным числом и нужным."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 14,
       "metadata": {
         "id": "IvaUUPIe-2fN"
       },
@@ -293,17 +297,18 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "UDeCIsG9CACE"
       },
       "source": [
-        "Оценим качество вашего алгоритма:"
+        "Оценим качество итогового алгоритма:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 15,
       "metadata": {
         "id": "giSKBUmgCAeh"
       },
