--- a/Project_0/game.ipynb
+++ b/Project_0/game.ipynb
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "metadata": {
         "id": "KIy8PgXL-2fH"
       },
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 2,
       "metadata": {
         "id": "pJaQGNND-2fK"
       },
@@ -111,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 3,
       "metadata": {
         "id": "bFzp7ROY_QYY"
       },
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 4,
       "metadata": {
         "id": "t4WXEDFS_ThY"
       },
@@ -209,7 +209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -222,8 +222,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Run benchmarking for random_predict: Ваш алгоритм угадывает число в среднем за: 101 попытки\n",
-            "Run benchmarking for game_core_v2: Ваш алгоритм угадывает число в среднем за: 32 попытки\n"
+            "Run benchmarking for random_predict: Ваш алгоритм угадывает число в среднем за: 99 попытки\n",
+            "Run benchmarking for game_core_v2: Ваш алгоритм угадывает число в среднем за: 33 попытки\n"
           ]
         }
       ],
@@ -264,12 +264,12 @@
       },
       "source": [
         "Функция, которая принимает на вход загаданное число и возвращает число попыток угадывания. \n",
-        "Сначала устанавливаем любое случайное число, затем в промежутке между полученным числом (исключительно) и нужным (включительно) устанавливаем новое случайное число и так до тех под пока не будет совпадения между полученным числом и нужным."
+        "Сначала устанавливаем любое случайное число в заданном интервале (1-100), затем в промежутке между полученным числом (исключительно) и нужным (включительно) устанавливаем новое случайное число и так до тех под пока не будет совпадения между полученным числом и нужным."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 35,
       "metadata": {
         "id": "IvaUUPIe-2fN"
       },
@@ -283,17 +283,27 @@
         "    Returns:\n",
         "        int: Число попыток\n",
         "    \"\"\"\n",
+        "    # Инициализируем счетчик попыток угадывания начальное значение\n",
         "    count = 0\n",
-        "    predict = np.random.randint(1, 101)\n",
-        "\n",
-        "    while number != predict:\n",
+        "    # Инициализируем начало и конец искомого диапазона\n",
+        "    first = 1\n",
+        "    last = 100\n",
+        "    # Создаем цикл, проверяем пока искомый диапазон\n",
+        "    while first <= last:\n",
+        "        # Инкрементируем счетчик\n",
         "        count += 1\n",
-        "        if number > predict:\n",
-        "            predict = np.random.randint(predict + 1, number + 1)\n",
-        "        elif number < predict:\n",
-        "            predict = np.random.randint(number, predict)\n",
-        "\n",
-        "    return count"
+        "        # Присвоим предсказательному числу среднее значение от искомого диапазона\n",
+        "        predict = first + (last - first) // 2\n",
+        "        # Если предсказательное число и загаданное равны, тогда возвращаем значение счетчка попыток\n",
+        "        if predict == number:\n",
+        "            return count\n",
+        "        # Если предсказательное число меньше загаданного — продолжаем поиск в правой части массива, иначе в левой\n",
+        "        elif predict < number:\n",
+        "            first = predict + 1\n",
+        "        else:\n",
+        "            last = predict - 1\n",
+        "    # Возвращаем отрицательный результат если загаданное число оказалось вне диапазона от 1 до 100\n",
+        "    return -1"
       ]
     },
     {
@@ -308,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 37,
       "metadata": {
         "id": "giSKBUmgCAeh"
       },
@@ -317,7 +327,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Run benchmarking for game_core_v3: Ваш алгоритм угадывает число в среднем за: 3 попытки\n"
+            "Run benchmarking for game_core_v3: Ваш алгоритм угадывает число в среднем за: 5 попытки\n"
           ]
         }
       ],
